Assigning the values to the maps.